2008-03-04 Peter Landgren <peter.talken2telia.com>
    * src/docgen/HtmlDoc.py: Issues 1875 and 1879#

2008-03-04 Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/plugins/WritePkg.py: added import Utils to prevent crash on export

2008-03-04  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DataViews/GrampletView.py: added infrastructure for 
	editing options from the gui.

2008-03-04  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/PluginUtils/_GuiOptions.py (make_gui_option): 
	new stand-alone function that takes Option, returns GuiOption
	(attempting to make Options useable in additional ways)

2008-03-03 Frederik De Richter <frederik.de.richter@pandora.be>
	* src/plugins/Desbrowser.py
	links to wiki manual 

2008-03-02 Brian Matherly <brian@gramps-project.org>
	* src/docgen/TextBufDoc.py:
	0001882: Reports->Text Reports->Kinship Report output to 
	"Text buffer" causes an error
	No longer use Text Buffer for reports because TextBufDoc does not 
	conform to the report interface.

2008-03-02 Brian Matherly <brian@gramps-project.org>
	* src/plugins/Calendar.py:
	0001880: Birthday and Anniversary Report does not work

2008-03-02 Brian Matherly <brian@gramps-project.org>
	* src/ManagedWindow.py:
  	 0001878: bug: AttributeError: BookReportDialog instance has no
	 attribute 'has_attribute'

2008-03-02 Brian Matherly <brian@gramps-project.org>
	* src/plugins/BookReport.py:
	* src/Utils.py
	Save and load books properly.

2008-03-02 Gary Burton <gary.burton@zen.co.uk>
	* src/GrampsDbUtils/_Backup.py: Restore databases with transactions
	enabled.

2008-03-02 Gary Burton <gary.burton@zen.co.uk>
	* src/GrampsCfg.py:
	* src/Config/_GrampsConfigKeys.py:
	* src/gen/db/dbdir.py:
	* src/DbManager.py:
	* src/DbLoader.py: Gramps databases run with transactions enabled. The
	option to switch off transactions is now removed. The "transactions" and 
	"port_warn" settings are ignored in the config file. Bug #1813

2008-03-02 Brian Matherly <brian@gramps-project.org>